          the Component's context and the Application's context.
        - Added logging capabilities to the Router classes via a new
          protected log(Route) method.
        - Directory listings now correctly display a trailing slash for
          directories. Suggested by Aron Roberts.
        - Load only once the accept.properties file used by the 
          TunnelFilter instance.
    - API changes
        - Added client and server RIAP connectors.
          Suggested by John Logsdon and Nirav Shah.
        - Added ClientInfo#getPreferredLanguage(), 
          getPreferredMediaType(), etc. methods.
          Suggested by Jonathan Hall.
    - Misc
        - Exceptions thrown in the internal HTTP client are not logged
          with a FINE level instead of a WARNING level.
          
- 2.0 Milestone 3 (2009-05-27)
    - Breaking changes
        - Deprecated ServletConverter and added an equivalent 
          ServletAdapter class to prevent confusion with the 
          ConverterService reintroduced in Restlet 1.2. 
        - Moved all XML, DOM, SAX and XSLT related classes from the core 
          Restlet API to a new "org.restlet.ext.xml" package. This was
          need to keep a uniform API with the new Android port.
    - Bugs fixed
        - Fixed bug with a ServerResource when an annotated method does 
          not return a value.
        - Fixed dependency issue in the org.restlet.example.pom. 
          Reported by Marcelo Ochoa.
        - ServerServlet ignores client connectors that are now available.
        - Fixed issue with annotation inheritance. 
          Contributed by Tal Liron.
        - Fixed bug causing Engine to be instantiated several time.
          Reported by David Fogel. 
        - Fixed potential issue in Engine classloading logic which used
          Class.class instead of Engine.class to get the class's 
          classloader. Reported by David Fogel.
        - Fixed conversion issues with edge cases.